fix bug: overflow mobile

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -15,7 +16,8 @@ body {
   font: normal 75% Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   background-color: #0a0a0a;
-  width: -webkit-fill-available;
+  width: 100%;
+  max-width: 100vw;
 }
 
 canvas {
